; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_vfr.c_flush_frames.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_vfr.c_flush_frames.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_4__*)* @flush_frames to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @flush_frames(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = call i32* @hb_buffer_list_clear(i32* %3)
  br label %5

5:                                                ; preds = %11, %1
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i64 @hb_list_count(i32 %8)
  %10 = icmp sgt i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %5
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %13 = call i32 @adjust_frame_rate(%struct.TYPE_4__* %12, i32* null)
  %14 = call i32 @hb_buffer_list_append(i32* %3, i32 %13)
  br label %5

15:                                               ; preds = %5
  %16 = call i32* @hb_buffer_list_clear(i32* %3)
  ret i32* %16
}

declare dso_local i32* @hb_buffer_list_clear(i32*) #1

declare dso_local i64 @hb_list_count(i32) #1

declare dso_local i32 @hb_buffer_list_append(i32*, i32) #1

declare dso_local i32 @adjust_frame_rate(%struct.TYPE_4__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
